updated swagger documentation, added missing routes and contact management
